--- a/template/{{.project_name}}/.github/workflows/semantic-release.yml
+++ b/template/{{.project_name}}/.github/workflows/semantic-release.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   release:
-    runs-on: ubuntu-laest
+    runs-on: ubuntu-latest
     permissions:
       contents: write
       issues: write
